--- a/Yamba1-Gr3/res/values/strings.xml
+++ b/Yamba1-Gr3/res/values/strings.xml
@@ -6,5 +6,13 @@
     <string name="action_settings">Settings</string>
     <string name="button_tweet">Tweet</string>
     <string name="hint_status">Qué está Pasando?</string>
+    <string name="username">Usuario</string>
+    <string name="username_summary">Nombre de Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="password_sumary">Ingrese su contraseña</string>
+    <string name="title_activity_main">Yamba2-Gr3</string>
+    <string name="tweet">tweet</string>
+    <string name="refresh">Actualizar</string>
+    <string name="purge">Limpiar</string>
 
 </resources>
